# URL-shortener

./: .gitignore  README.md  pyproject.toml
backend/: gunicorn.conf.py  newrelic.ini  nixpacks.json  pyproject.toml  railway.toml  requirements.txt
backend/src/url_shortener/app/: main.py
backend/src/url_shortener/database/: redis_client.py
backend/src/url_shortener/routes/: healthcheck_routes.py  urls_routes.py
frontend/: package-lock.json  package.json  svelte.config.js  tailwind.config.cjs
frontend/src/routes/: +page.svelte
src/url_shortener/: __init__.py
src/url_shortener/app/: main.py
src/url_shortener/database/: redis_client.py
src/url_shortener/routers/: urls_router.py
